# agentfs

./: CHANGELOG.md  MANUAL.md  README.md  SPEC.md  dist-workspace.toml
.claude/commands/: generate-py-sdk.md
.devcontainer/: Dockerfile  docker-compose.yml  squid.conf
.github/workflows/: build-setup.yml  python.yml  rust.yml
cli/: Cargo.toml  build.rs
cli/perf/: simulate-npm-workload.sh
cli/src/: fuse.rs  main.rs  nfs.rs  parser.rs
cli/src/cmd/: exec.rs  fs.rs  init.rs  mcp_server.rs  mod.rs  mount.rs  mount_stub.rs  nfs.rs  run.rs  run_darwin.rs  run_stub.rs  timeline.rs
cli/src/sandbox/: linux.rs  mod.rs  overlay.rs
cli/tests/: .gitignore  all.sh  test-init.sh  test-mount.sh  test-overlay-delta-in-base-dir.sh  test-run-syscalls.sh  test-syscalls.sh
cli/tests/syscall/: Makefile  main.c  test-close.c  test-common.h  test-copyup-permissions.c  test-dup.c  test-dup2.c  test-fstat.c  test-getdents64.c  test-lstat.c  test-mkfifo.c  test-mknod.c  test-openat.c  test-read.c  test-rename.c  test-stat.c  test-write.c
sandbox/: Cargo.toml
sandbox/src/syscall/: file.rs  mod.rs  stat.rs  xattr.rs
sandbox/src/vfs/: sqlite.rs
scripts/: install-deps.sh
sdk/go/: README.md  SPEC_TESTS.md  agentfs.go  agentfs_test.go  benchmark_test.go  cache_test.go  constants.go  errors.go  file.go  file_streaming_test.go  filesystem.go  go.mod  go.sum  interfaces.go  iofs.go  iofs_test.go  kvstore.go  kvstore_generic_test.go  overlay.go  overlay_test.go  pool_test.go  schema.go  spec_test.go  symlink_test.go  toolcalls.go  types.go
sdk/go/internal/cache/: cache.go  lru.go  lru_test.go
sdk/python/: pyproject.toml
sdk/python/agentfs/: toolcalls.py
sdk/python/agentfs_sdk/: __init__.py  agentfs.py  constants.py  errors.py  filesystem.py  guards.py  kvstore.py
sdk/python/examples/: filesystem_demo.py  kvstore_demo.py  toolcalls_demo.py
sdk/python/tests/: test_agentfs.py  test_basic.py  test_filesystem.py  test_kvstore.py  test_toolcalls.py
sdk/rust/: Cargo.toml
sdk/rust/benches/: workload.rs
sdk/rust/src/: connection_pool.rs  error.rs  kvstore.rs  lib.rs  toolcalls.rs
sdk/rust/src/filesystem/: agentfs.rs  hostfs.rs  mod.rs  overlayfs.rs
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: agentfs.ts  index_browser.ts  index_node.ts
sdk/typescript/src/filesystem/: agentfs.ts
sdk/typescript/src/integrations/cloudflare/: agentfs.ts
sdk/typescript/src/integrations/serverless/: adapter.ts
sdk/typescript/tests/: filesystem.test.ts  index.test.ts  kvstore.test.ts  serverless.test.ts  toolcalls.test.ts
