[package]
name = "agentfs"
version = "0.3.0-pre.6"
edition = "2021"
repository = "https://github.com/tursodatabase/agentfs"

[[bin]]
name = "agentfs"
path = "src/main.rs"

[dependencies]
agentfs-sdk = { path = "../sdk/rust" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
turso = { git = "https://github.com/tursodatabase/turso", tag = "v0.4.0-pre.16" }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12.5"
clap_complete = { version = "=4.5.61", features = ["unstable-dynamic"] }
dirs = "6"

# Unix dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux-only dependencies for FUSE functionality
[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.15", default-features = false, features = ["abi-7-23"] }

# macOS dependencies for FUSE functionality (requires macFUSE)
[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.15", default-features = false, features = ["abi-7-23", "libfuse"] }

# Sandbox dependencies - Linux x86_64 only (requires libunwind-ptrace)
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
agentfs-sandbox = { path = "../sandbox" }
reverie = { git = "https://github.com/facebookexperimental/reverie" }
reverie-ptrace = { git = "https://github.com/facebookexperimental/reverie" }
reverie-process = { git = "https://github.com/facebookexperimental/reverie" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
tempfile = "3.23.0"
