[package]
name = "agentfs"
version = "0.6.0-pre.1"
edition = "2021"
repository = "https://github.com/tursodatabase/agentfs"

[lib]
name = "agentfs"
path = "src/lib.rs"

[[bin]]
name = "agentfs"
path = "src/main.rs"

[features]
default = ["sandbox"]
sandbox = [
    "dep:agentfs-sandbox",
    "dep:reverie",
    "dep:reverie-ptrace",
    "dep:reverie-process",
]

[dependencies]
agentfs-sdk = { path = "../sdk/rust" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
turso = { version = "0.4.3-pre.2", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12.5"
clap_complete = { version = "=4.5.61", features = ["unstable-dynamic"] }
dirs = "6"
serde_json = "1.0.147"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.42", features = ["serde"] }

# MCP Server support
base64 = "0.22"

# NFS server for userspace filesystem (used by `agentfs run` and `agentfs nfs`)
uuid = { version = "1", features = ["v4"] }
zerofs_nfsserve = "0.19"
tokio-util = "0.7"
async-trait = "0.1"

# Unix dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux-only dependencies for FUSE and sandbox functionality
[target.'cfg(target_os = "linux")'.dependencies]
# Sandbox dependencies - (requires libunwind-dev on ARM)
agentfs-sandbox = { path = "../sandbox", optional = true }
reverie = { git = "https://github.com/facebookexperimental/reverie", optional = true }
reverie-ptrace = { git = "https://github.com/facebookexperimental/reverie", optional = true }
reverie-process = { git = "https://github.com/facebookexperimental/reverie", optional = true }
# Vendored fuser dependencies (pure-Rust FUSE implementation)
log = "0.4"
memchr = "2.7"
page_size = "0.6"
smallvec = "1.6"
zerocopy = { version = "0.8", features = ["derive"] }
nix = { version = "0.29", features = ["fs", "user"] }

# macOS dependencies for NFS functionality (no FUSE - uses nfsserve instead)
[target.'cfg(target_os = "macos")'.dependencies]
# Ensure transitive `aegis` (pulled in by `turso`) builds on macOS arm64 by
# forcing the `pure-rust` feature, which skips the C/NEON backend that fails
# with Apple clang (`veor3q_u8` in `aegis128l_neon_sha3.c`).
aegis = { version = "0.9.6", features = ["pure-rust"] }


# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
tempfile = "3.23.0"
