[package]
name = "agentfs-sandbox"
version = "0.2.0-pre.6"
edition = "2021"

[dependencies]
agentfs-sdk = { path = "../sdk/rust" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }

# Linux-only dependencies for sandbox functionality
[target.'cfg(target_os = "linux")'.dependencies]
reverie = { git = "https://github.com/facebookexperimental/reverie" }
reverie-ptrace = { git = "https://github.com/facebookexperimental/reverie" }
reverie-process = { git = "https://github.com/facebookexperimental/reverie" }
reverie-util = { git = "https://github.com/facebookexperimental/reverie" }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
