[package]
name = "agentfs-sdk"
version = "0.4.0-pre.6"
edition = "2021"
description = "AgentFS SDK for Rust"
license = "MIT"

[dependencies]
turso = { git = "https://github.com/tursodatabase/turso", rev = "bd2b3314a0d860ac8bde2fe560650f7d753591eb" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
# `aegis`'s C/NEON backend fails to compile with Apple clang on arm64 due to
# missing SHA3/NEON intrinsics (e.g. `veor3q_u8`). Enabling `pure-rust` makes
# `aegis` skip its C build script entirely on macOS.
aegis = { version = "0.9.6", features = ["pure-rust"] }

[dev-dependencies]
tempfile = "3"
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "overlayfs"
harness = false

[profile.bench]
debug = true
