[package]
name = "agentfs-sdk"
version = "0.6.3"
edition = "2021"
description = "AgentFS SDK for Rust"
license = "MIT"

[dependencies]
turso = { version = "0.4.4", features = ["sync"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
thiserror = "1.0"
lru = "0.12"
tracing = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
# `aegis`'s C/NEON backend fails to compile with Apple clang on arm64 due to
# missing SHA3/NEON intrinsics (e.g. `veor3q_u8`). Enabling `pure-rust` makes
# `aegis` skip its C build script entirely on macOS.
aegis = { version = "0.9.6", features = ["pure-rust"] }

[dev-dependencies]
tempfile = "3"
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"

[[bench]]
name = "overlayfs"
harness = false

[[bench]]
name = "workload"
harness = false

[profile.bench]
debug = true
